syntax = "proto3";

package com.example.grpc;

message LoginRequest{
  string login =1;
  string password =2;
}
message LoginResponse{
  string token = 1;
}

service LoginService{
  rpc login(LoginRequest) returns (LoginResponse);
}